lots of stuff - General   - format   - remove reflections   - remove Jankson (over 1mb of bloat)   - use Gson   - use class wide lombok getter/setter whenever possible - Screens   - KeymapScreen.java     - bg + border - Widgets   - KeymapListWidget     - update KeyWidget based on selection     - add debug tooltips   - KeyWidget     - allow receiving discrete selection updates   - VirtualKeyboardWidget     - remove unused constructor - Config   - KeymapConfig     - transition to gson - Layout   - General     - transition to gson, use protected/private as much as possible   - KeyLayout     - transition loader to gson     - FileSystemNotFoundException hell - Registry   - KeybindingRegistry     - allow to notify individual KeyWidget with selected status   - KeymapRegistry     - fvk reflections, moving to manual removed over 1mb of bloat - Wrappers   - Holders     - add getSearchString function for search queries - Top Widgets   - EList     - add special setters for itemSelected and lastItemSelected, redundant tho, will try and figure it out sometime   - EScreen     - add drawing utils - Resources   - Layouts     - converted to json